--- a/bag-rettet2.html
+++ b/bag-rettet2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GFS Portefølje Om Mig</title>
+    <title>GFS Portefølje Projekter Bag Rettet 2</title>
     <link rel="stylesheet" href="style/normalize.css">
     <link rel="stylesheet" href="style/style.css">
 </head>
@@ -77,6 +77,32 @@
             </nav>
         </div>
     </header>
+
+    <section class="projekt-bag-rettet2">
+        <div class="tekst">
+            <div class="B-R-2-B">
+
+            </div>
+            <h2>Bag rettet del 2</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque at obcaecati, eveniet qui tempora dolores dignissimos accusantium dolore voluptatem autem, corporis ad. Eius officiis corrupti molestiae repellendus excepturi facilis velit exercitationem ratione eveniet tenetur, ullam, atque possimus fuga? Ipsa, blanditiis.</p>
+            <hr>
+        </div>
+        <div class="tekst">
+            <div class="Bag-Rettet2-logo">
+
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, soluta! Dignissimos est mollitia nesciunt aliquid architecto, veniam et eius laboriosam?</p>
+            <div class="br2s1">
+
+            </div>
+            <div class="br2s2">
+
+            </div>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo eos quos, voluptatem aut dolores obcaecati officia possimus quasi nihil veritatis totam voluptate veniam exercitationem? Animi est reiciendis porro ipsam expedita laborum, velit molestias nulla nostrum id consequuntur ratione impedit adipisci amet non et veritatis recusandae illum labore eligendi repellendus odio.</p>
+        </div>
+    </section>
+
+    <!-- footer -->
 
     <footer class="main-footer">
         <hr>
