--- a/dans2.html
+++ b/dans2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GFS Portefølje Om Mig</title>
+    <title>GFS Portefølje Projekter Dans 2</title>
     <link rel="stylesheet" href="style/normalize.css">
     <link rel="stylesheet" href="style/style.css">
 </head>
@@ -77,6 +77,26 @@
             </nav>
         </div>
     </header>
+
+    <!-- Dans dans dans del 2 top-->
+    <section class="Dans2-top">
+        <div class="tekst">
+            <div class="D-d-d2">
+
+            </div>
+            <h2>Dans, dans, dans del 2</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque at obcaecati, eveniet qui tempora dolores dignissimos accusantium dolore voluptatem autem, corporis ad. Eius officiis corrupti molestiae repellendus excepturi facilis velit exercitationem ratione eveniet tenetur, ullam, atque possimus fuga? Ipsa, blanditiis.</p>
+            <hr>
+        </div>
+        <div class="tekst">
+            <div class="b-logo">
+
+            </div>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga eaque, distinctio laudantium voluptas velit quasi nemo beatae veniam quis totam deleniti quibusdam saepe dolorum tenetur!</p>
+        </div>
+    </section>
+
+    <!-- footer -->
 
     <footer class="main-footer">
         <hr>
