--- a/dnr.html
+++ b/dnr.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GFS Portefølje Om Mig</title>
+    <title>GFS Portefølje Projekter DNR</title>
     <link rel="stylesheet" href="style/normalize.css">
     <link rel="stylesheet" href="style/style.css">
 </head>
@@ -77,6 +77,27 @@
             </nav>
         </div>
     </header>
+
+    <!-- Top -->
+    <section class="rumrejsen-top">
+        <div class="tekst">
+            <div class="dnr-b">
+
+            </div>
+            <h2>Bag rettet del 2</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque at obcaecati, eveniet qui tempora dolores dignissimos accusantium dolore voluptatem autem, corporis ad. Eius officiis corrupti molestiae repellendus excepturi facilis velit exercitationem ratione eveniet tenetur, ullam, atque possimus fuga? Ipsa, blanditiis.</p>
+            <hr>
+        </div>
+        <!-- Andet billede af en raket -->
+        <div class="tekst">
+            <div class="dnr-r">
+
+            </div>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde accusantium incidunt officiis libero dicta praesentium odit? Fugiat quisquam sunt ex.</p>
+        </div>
+    </section>
+
+    <!-- Footer -->
 
     <footer class="main-footer">
         <hr>
