--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>GFS Portefølje Portefølje Startside</title>
     <link rel="stylesheet" href="style/normalize.css">
     <link rel="stylesheet" href="style/style.css">
 </head>
@@ -78,6 +78,8 @@
         </div>
     </header>
 
+    <!-- portefølje top tekst -->
+
     <div class="Portfolio-top">
         <h1>
             Portefølje
@@ -85,6 +87,8 @@
     </div>
 
     <hr class="port-first">
+
+    <!-- portefølje første billede med overskrift -->
 
     <section class="p-p">
         <a href="./portfolio-pp.html">
@@ -99,6 +103,8 @@
     </section>
     
     <hr class="port">
+
+    <!-- Portefølje andet billede med overskrift -->
     
     <section class="t-p">
         <a href="./portfolio-projects.html">
@@ -113,6 +119,8 @@
     </section>
 
     <hr class="port">
+
+    <!-- Footer -->
 
     <footer class="main-footer">
         <hr>
