--- a/video.html
+++ b/video.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GFS Portefølje Om Mig</title>
+    <title>GFS Portefølje Projekter Video</title>
     <link rel="stylesheet" href="style/normalize.css">
     <link rel="stylesheet" href="style/style.css">
 </head>
@@ -77,6 +77,25 @@
             </nav>
         </div>
     </header>
+
+
+    <!-- Top billede -->
+    <section class="video-portret">
+        <div class="tekst">
+            <div class="v-b">
+
+            </div>
+            <h2>Video portræt</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque at obcaecati, eveniet qui tempora dolores dignissimos accusantium dolore voluptatem autem, corporis ad. Eius officiis corrupti molestiae repellendus excepturi facilis velit exercitationem ratione eveniet tenetur, ullam, atque possimus fuga? Ipsa, blanditiis.</p>
+            <hr>
+        </div>
+        <!-- video -->
+        <div class="v-p">
+            <iframe width="371" height="200" src="https://www.youtube.com//embed/watch?v=lvyisy96bu0"></iframe>
+        </div>
+    </section>
+
+    <!-- footer -->
 
     <footer class="main-footer">
         <hr>
