--- a/bag-rettet.html
+++ b/bag-rettet.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GFS Portefølje Om Mig</title>
+    <title>GFS Portefølje Projekter Bag Rettet</title>
     <link rel="stylesheet" href="style/normalize.css">
     <link rel="stylesheet" href="style/style.css">
 </head>
@@ -77,6 +77,27 @@
             </nav>
         </div>
     </header>
+
+    <!-- bag rettet intro -->
+    <section class="Bag-rettet-top">
+        <div class="tekst">
+            <div class="B-R-B">
+
+            </div>
+            <h2>Bag rettet del 1</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque at obcaecati, eveniet qui tempora dolores dignissimos accusantium dolore voluptatem autem, corporis ad. Eius officiis corrupti molestiae repellendus excepturi facilis velit exercitationem ratione eveniet tenetur, ullam, atque possimus fuga? Ipsa, blanditiis.</p>
+            <hr>
+        </div>
+        <!-- Logo -->
+        <div class="tekst">
+            <div class="B-R-Logo">
+
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam laudantium voluptate sunt dolor rem eum, quod maxime. Consectetur, repellendus voluptates.</p>
+        </div>
+    </section>
+
+    <!-- footer -->
 
     <footer class="main-footer">
         <hr>
