--- a/dans.html
+++ b/dans.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GFS Portefølje Om Mig</title>
+    <title>GFS Portefølje Projekter Dans</title>
     <link rel="stylesheet" href="style/normalize.css">
     <link rel="stylesheet" href="style/style.css">
 </head>
@@ -77,6 +77,22 @@
             </nav>
         </div>
     </header>
+
+    <!-- Dans, dans, dans top -->
+
+    <section class="dans-top">
+        <div class="tekst">
+            <div class="B-R-T">
+
+            </div>
+            <h2>Bag rettet del 1</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque at obcaecati, eveniet qui tempora dolores dignissimos accusantium dolore voluptatem autem, corporis ad. Eius officiis corrupti molestiae repellendus excepturi facilis velit exercitationem ratione eveniet tenetur, ullam, atque possimus fuga? Ipsa, blanditiis.</p>
+            <hr>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime vitae molestias maiores quasi hic nemo sunt beatae id laudantium commodi, voluptate ratione harum rerum totam asperiores fuga, amet qui ad animi facere dicta fugiat! Voluptatem ex, sed recusandae aperiam incidunt animi sint corrupti porro aliquid architecto in repudiandae temporibus veritatis ducimus? Dolorum deleniti ad hic aspernatur provident ducimus autem quo.</p>
+        </div>
+    </section>
+
+    <!-- footer -->
 
     <footer class="main-footer">
         <hr>
