--- a/portfolio-pp.html
+++ b/portfolio-pp.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>GFS Portefølje Personlige Projekter</title>
     <link rel="stylesheet" href="style/normalize.css">
     <link rel="stylesheet" href="style/style.css">
 </head>
@@ -77,6 +77,8 @@
             </nav>
         </div>
     </header>
+
+    
 
     <footer class="main-footer">
         <hr>
