--- a/portfolio-projects.html
+++ b/portfolio-projects.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-185254270-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'UA-185254270-1');
+    </script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GFS portefølje projekter</title>
@@ -27,9 +37,6 @@
                 </a>
                 <a class="item" href="aboutme.html">
                     Om mig
-                </a>
-                <a class="item" href="contact.html">
-                    Kontakt
                 </a>
             </div>
             
@@ -68,11 +75,6 @@
                             Om mig
                         </a>
                     </li>
-                    <li>
-                        <a class="item" href="contact.html">
-                            Kontakt
-                        </a>
-                    </li>
                 </ul>
             </nav>
         </div>
@@ -89,7 +91,7 @@
             </a>
             <hr>
         </div>
-        <div class="hjemmesider2">
+        <div class="hjemmesider">
             <a href="./dans.html">
                 <h2>Dans, dans, dans</h2>
                 <div class="h-l-b2">
@@ -99,7 +101,7 @@
             </a>
             <hr>
         </div>
-        <div class="hjemmesider3">
+        <div class="hjemmesider">
             <a href="./dans2.html">
                 <h2>Dans, dans, dans del 2</h2>
                 <div class="h-l-b3">
@@ -109,7 +111,7 @@
             </a>
             <hr>
         </div>
-        <div class="hjemmesider4">
+        <div class="hjemmesider">
             <a href="./bag-rettet.html">
                 <h2>Bag rettet</h2>
                 <div class="h-l-b4">
@@ -119,7 +121,7 @@
             </a>
             <hr>
         </div>
-        <div class="hjemmesider5">
+        <div class="hjemmesider">
             <a href="./video.html">
                 <h2>Video portræt</h2>
                 <div class="h-l-b5">
@@ -129,7 +131,7 @@
             </a>
             <hr>
         </div>
-        <div class="hjemmesider6">
+        <div class="hjemmesider">
             <a href="./bag-rettet2.html">
                 <h2>Bag rettet del 2</h2>
                 <div class="h-l-b6">
@@ -153,9 +155,15 @@
                 <p>+45 xx xx xx xx</p>
             </div>
             <div class="sociale-all">
-                <img class="fb-all" src="img/fb.png" alt="Facebook">
-                <img class="ig-all" src="img/ig.png" alt="Instagram">
-                <img class="li-all" src="img/li.png" alt="Linkedin">
+                <a href="https://www.facebook.com/gabriella.fog.schroder/">
+                    <img class="fb-all" src="img/fb.png" alt="Facebook">
+                </a>
+                <a href="https://www.instagram.com/gabriella7389/">
+                    <img class="ig-all" src="img/ig.png" alt="Instagram">
+                </a>
+                <a href="http://linkedin.com/in/gabriella-fog-7154791a9">
+                    <img class="li-all" src="img/li.png" alt="Linkedin">
+                </a>
             </div>
         </div>
     </footer>
