--- a/aboutme.html
+++ b/aboutme.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-185254270-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'UA-185254270-1');
+    </script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GFS Portefølje Om Mig</title>
@@ -27,9 +37,6 @@
                 </a>
                 <a class="item" href="aboutme.html">
                     Om mig
-                </a>
-                <a class="item" href="contact.html">
-                    Kontakt
                 </a>
             </div>
             
@@ -68,15 +75,33 @@
                             Om mig
                         </a>
                     </li>
-                    <li>
-                        <a class="item" href="contact.html">
-                            Kontakt
-                        </a>
-                    </li>
                 </ul>
             </nav>
         </div>
     </header>
+
+    <!-- Top tekst -->
+    <div class="about-top">
+        <h1>Om mig</h1>
+    </div>
+
+    <!-- billede + tekst om mig -->
+    <section class="about-me">
+        <div>
+            <p><strong>minus est enim </strong></p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, modi aliquid perferendis quae facilis fuga exercitationem! Repellat deleniti hic nostrum libero numquam, facilis vitae rerum nisi repudiandae velit non. Velit consequatur ex, placeat qui cumque autem quod maiores libero perferendi. </p>        
+        </div>
+        <img src="img/mig-face.jpg" alt="Face">
+    </section>
+
+    <section class="about-me-tekst">
+        <div class="a-m-e">
+            <p><strong>minus est enim </strong></p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, ut! Quo est doloremque tenetur eligendi provident itaque! Quidem, similique quaerat odit nisi, delectus deleniti minima blanditiis quas optio sed sunt illum. Tempore, voluptates ipsum. Molestias quam quaerat culpa porro sunt minus est enim accusantium, qui necessitatibus debitis ipsa odio at?</p>
+        </div>
+    </section>
+
+    <!-- footer -->
 
     <footer class="main-footer">
         <hr>
@@ -88,9 +113,15 @@
                 <p>+45 xx xx xx xx</p>
             </div>
             <div class="sociale-all">
-                <img class="fb-all" src="img/fb.png" alt="Facebook">
-                <img class="ig-all" src="img/ig.png" alt="Instagram">
-                <img class="li-all" src="img/li.png" alt="Linkedin">
+                <a href="https://www.facebook.com/gabriella.fog.schroder/">
+                    <img class="fb-all" src="img/fb.png" alt="Facebook">
+                </a>
+                <a href="https://www.instagram.com/gabriella7389/">
+                    <img class="ig-all" src="img/ig.png" alt="Instagram">
+                </a>
+                <a href="http://linkedin.com/in/gabriella-fog-7154791a9">
+                    <img class="li-all" src="img/li.png" alt="Linkedin">
+                </a>
             </div>
         </div>
     </footer>
