--- a/video.html
+++ b/video.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-185254270-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'UA-185254270-1');
+    </script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GFS Portefølje Projekter Video</title>
@@ -27,9 +37,6 @@
                 </a>
                 <a class="item" href="aboutme.html">
                     Om mig
-                </a>
-                <a class="item" href="contact.html">
-                    Kontakt
                 </a>
             </div>
             
@@ -68,11 +75,6 @@
                             Om mig
                         </a>
                     </li>
-                    <li>
-                        <a class="item" href="contact.html">
-                            Kontakt
-                        </a>
-                    </li>
                 </ul>
             </nav>
         </div>
@@ -91,7 +93,7 @@
         </div>
         <!-- video -->
         <div class="v-p">
-            <iframe width="371" height="200" src="https://www.youtube.com//embed/watch?v=lvyisy96bu0"></iframe>
+            <iframe width="371" height="200" src="https://www.youtube.com/embed/lvyisy96bu0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </section>
 
@@ -107,9 +109,15 @@
                 <p>+45 xx xx xx xx</p>
             </div>
             <div class="sociale-all">
-                <img class="fb-all" src="img/fb.png" alt="Facebook">
-                <img class="ig-all" src="img/ig.png" alt="Instagram">
-                <img class="li-all" src="img/li.png" alt="Linkedin">
+                <a href="https://www.facebook.com/gabriella.fog.schroder/">
+                    <img class="fb-all" src="img/fb.png" alt="Facebook">
+                </a>
+                <a href="https://www.instagram.com/gabriella7389/">
+                    <img class="ig-all" src="img/ig.png" alt="Instagram">
+                </a>
+                <a href="http://linkedin.com/in/gabriella-fog-7154791a9">
+                    <img class="li-all" src="img/li.png" alt="Linkedin">
+                </a>
             </div>
         </div>
     </footer>
