--- a/aboutme.html
+++ b/aboutme.html
@@ -88,16 +88,16 @@
     <!-- billede + tekst om mig -->
     <section class="about-me">
         <div>
-            <p><strong>minus est enim </strong></p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, modi aliquid perferendis quae facilis fuga exercitationem! Repellat deleniti hic nostrum libero numquam, facilis vitae rerum nisi repudiandae velit non. Velit consequatur ex, placeat qui cumque autem quod maiores libero perferendi. </p>        
+            <p><strong>Gabriella Fog Schrøder</strong></p>
+            <p>Jeg er kreativt anlagt med mange interesser inde for design. Jeg er nytænkende og kaster mig ofte ud i nye projekter inde for multimedie og grafisk design. Jeg elsker både at arbejde i teams og for mig selv. Jeg er frivillig på et ældrecenter hvor jeg har et tegnehold som ydeligere sat ild til min lidenskab for både målgrupper og illustrationer</p>        
         </div>
         <img src="img/mig-face.jpg" alt="Face">
     </section>
 
     <section class="about-me-tekst">
         <div class="a-m-e">
-            <p><strong>minus est enim </strong></p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, ut! Quo est doloremque tenetur eligendi provident itaque! Quidem, similique quaerat odit nisi, delectus deleniti minima blanditiis quas optio sed sunt illum. Tempore, voluptates ipsum. Molestias quam quaerat culpa porro sunt minus est enim accusantium, qui necessitatibus debitis ipsa odio at?</p>
+            <p><strong>Uddannelse</strong></p>
+            <p><strong>Next Albertslund Gymnasium - HTX Design</strong> <br> På HTX gik jeg på design-linjen som senere skiftede navn til create. Rellevante fag jeg har haft er Teknologi A, Teknik A, kommunikation/it c og Design B. I teknologi arbejde vi meget med idegenerering og designthinking. I design arbejdede vi meget med grafisk design og illustrationer. Blandt andet lavede vi rekleme design, tryk og tegnede illustrationer til en historie. Jeg blev student i 2019.</p>
         </div>
     </section>
 
