--- a/bag-rettet.html
+++ b/bag-rettet.html
@@ -87,7 +87,7 @@
 
             </div>
             <h2>Bag rettet del 1</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque at obcaecati, eveniet qui tempora dolores dignissimos accusantium dolore voluptatem autem, corporis ad. Eius officiis corrupti molestiae repellendus excepturi facilis velit exercitationem ratione eveniet tenetur, ullam, atque possimus fuga? Ipsa, blanditiis.</p>
+            <p>Projektet var en 2 delt opgave hvor første del skulle vi fokusere på at finde ud af hvem er vores målgruppe, hvilke kongruenter har vi og hvad kan vi gøre anderledes. For eksempel kan det være vores kongruent ikke er på sociale medier men det er målgruppen. Vi skulle opbygge en bilhjemmeside der kunne tilbyde dette. <br> Se siden <a href="http://ella3bella.dk/3.%20projekt%20-%20bag%20rettet%20del%201/">her</a>.</p>
             <hr>
         </div>
         <!-- Logo -->
@@ -95,7 +95,7 @@
             <div class="B-R-Logo">
 
             </div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam laudantium voluptate sunt dolor rem eum, quod maxime. Consectetur, repellendus voluptates.</p>
+            <p>I vores gruppe havde vi misforstået opgaven men ud fra den misforståelse lærte jeg en vigtig lektie der hedder at nogle gangen er en kunde ikke altid hel klar i hvad de vil havde så det er vigtigt man stiller en masse spørgsmål og man under vejs viser hvad man har lavet og spørger om det er det kunden går efter. Deruover lærte jeg hvor vigtigt det er at lære ens kongruents stærke og svage sider så man ved hvordan man man kan på ens målgruppe til at vælge dig frem for dem. Interesseret i at se opgaven? Se projektet <a href="https://docs.google.com/document/d/1BTyez6NRr-YCZdTct8LtPdtKOh1OFBt1sHwO5aoAElE/edit?usp=sharing">her</a>.</p>
         </div>
     </section>
 
