--- a/bag-rettet2.html
+++ b/bag-rettet2.html
@@ -86,21 +86,20 @@
 
             </div>
             <h2>Bag rettet del 2</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque at obcaecati, eveniet qui tempora dolores dignissimos accusantium dolore voluptatem autem, corporis ad. Eius officiis corrupti molestiae repellendus excepturi facilis velit exercitationem ratione eveniet tenetur, ullam, atque possimus fuga? Ipsa, blanditiis.</p>
+            <p>I del 2 af projekt Bag rettet skulle vi fokusere på content plan og budskab og tekst. <br> derudover skulle vi gentænke dele af vores koncept da vi havde misforstået målgruppen første gang. Se projektet <a href="http://ella3bella.dk/Bag%20rettet%20del%202/">her</a>.</p>
             <hr>
         </div>
         <div class="tekst">
             <div class="Bag-Rettet2-logo">
 
             </div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus, soluta! Dignissimos est mollitia nesciunt aliquid architecto, veniam et eius laboriosam?</p>
+            <p>I dette projekt lærte jeg hvor vigtigt det er at være på de sociale medier og bruge dem når du så har en. At poste ofte og relevante ting så du ikke mister din målgruppe/kundes interesse. interesseret i at se opgaven? se projektet <a href="https://docs.google.com/document/d/1UfoJ17rAKN9wwFBTieGmBh1KLymzLmKG6ugTAXzw2qA/edit?usp=sharing">her</a>.</p>
             <div class="br2s1">
 
             </div>
             <div class="br2s2">
 
             </div>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo eos quos, voluptatem aut dolores obcaecati officia possimus quasi nihil veritatis totam voluptate veniam exercitationem? Animi est reiciendis porro ipsam expedita laborum, velit molestias nulla nostrum id consequuntur ratione impedit adipisci amet non et veritatis recusandae illum labore eligendi repellendus odio.</p>
         </div>
     </section>
 
