--- a/dans.html
+++ b/dans.html
@@ -87,10 +87,13 @@
             <div class="B-R-T">
 
             </div>
-            <h2>Bag rettet del 1</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque at obcaecati, eveniet qui tempora dolores dignissimos accusantium dolore voluptatem autem, corporis ad. Eius officiis corrupti molestiae repellendus excepturi facilis velit exercitationem ratione eveniet tenetur, ullam, atque possimus fuga? Ipsa, blanditiis.</p>
+            <h2>Dans, dans, dans del 1</h2>
+            <p>I dette projekt var der stor fokus på designprocessen og udvikling af produktet til et specifikt brugersegment. Produktet skulle være en hjemmeside til mobil hvor hver gruppemedlem skulle lave en side på hjemmesiden. Hver gruppe fik en dansestil som de skulle lave en hjemmeside til og vise en målgruppe ud fra. Se hjemmesiden <a href="http://ella3bella.dk/andet%20projektdans%20dans%20dans%20-%20swing/">her</a>.</p>
             <hr>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime vitae molestias maiores quasi hic nemo sunt beatae id laudantium commodi, voluptate ratione harum rerum totam asperiores fuga, amet qui ad animi facere dicta fugiat! Voluptatem ex, sed recusandae aperiam incidunt animi sint corrupti porro aliquid architecto in repudiandae temporibus veritatis ducimus? Dolorum deleniti ad hic aspernatur provident ducimus autem quo.</p>
+            <div class="B-R-T2">
+
+            </div>
+            <p>I dette projekt lærte jeg at programmer såsom XD er en stor hjælp når man skal kode en hjemmeside da man har et klart overblik over hvad der skal laves.  <br>Interesseret i at se vores opgave? Se opgaven <a href="https://docs.google.com/document/d/1tvDgkBNNDWRswaf3ujVqdkuJWeYzwV4DAOJWR0iUcwo/edit?usp=sharing">her</a>.</p>
         </div>
     </section>
 
