--- a/dans2.html
+++ b/dans2.html
@@ -87,14 +87,14 @@
 
             </div>
             <h2>Dans, dans, dans del 2</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque at obcaecati, eveniet qui tempora dolores dignissimos accusantium dolore voluptatem autem, corporis ad. Eius officiis corrupti molestiae repellendus excepturi facilis velit exercitationem ratione eveniet tenetur, ullam, atque possimus fuga? Ipsa, blanditiis.</p>
+            <p>Del 2 handlede om at overtage en anden gruppes projekt og byggevidere på de observationer de lavede. Enten kunne man lave videre på deres design eller bygge hjemmesiden helt om hvis man ikke mente det passede til målgruppen. Se hjemmesiden <a href="http://ella3bella.dk/Andet%20projekt%20del%202%20dans%20dans%20dans%20-%20bollywood/">her</a>.</p>
             <hr>
         </div>
         <div class="tekst">
             <div class="b-logo">
 
             </div>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga eaque, distinctio laudantium voluptas velit quasi nemo beatae veniam quis totam deleniti quibusdam saepe dolorum tenetur!</p>
+            <p>Projektet kaldte på en dnseskole vi i den første del af projektet ikke havde deffineret så i denne del viste jeg det ved at lave et logo der passede til den målgruppe vi havde ud fra den research vi lavede. I dette projekt lærte jeg hvor vigtigt det er at danne sig et helt klart og skarpt billede af en målgruppe før du begynder at finde en læsning på deres problemer. Hvis du ikke har en klar ide om hvad de har behov for eller hvad de kan lide vil de meget hurtigt miste interesse.<br> interesseret i at læse opgaven? Se projektet <a href="https://docs.google.com/document/d/1o4W2fPimTGsaU33vLeb5kTXcDY31MYjrd3kUyaUuy0U/edit?usp=sharing">her</a>.</p>
         </div>
     </section>
 
