--- a/dnr.html
+++ b/dnr.html
@@ -87,7 +87,7 @@
 
             </div>
             <h2>Rumrejsen</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque at obcaecati, eveniet qui tempora dolores dignissimos accusantium dolore voluptatem autem, corporis ad. Eius officiis corrupti molestiae repellendus excepturi facilis velit exercitationem ratione eveniet tenetur, ullam, atque possimus fuga? Ipsa, blanditiis.</p>
+            <p>Meningen med projektet var at lave et koncept og et website til DNR. Vi skulle arbejde på sketches og lave billeder i photoshop til siden som vi kodede. Se siden <a href="http://ella3bella.dk/f%C3%B8rste%20projekt%20space/">her</a>.</p>
             <hr>
         </div>
         <!-- Andet billede af en raket -->
@@ -95,7 +95,10 @@
             <div class="dnr-r">
 
             </div>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde accusantium incidunt officiis libero dicta praesentium odit? Fugiat quisquam sunt ex.</p>
+            <div class="dnr-t">
+
+            </div>
+            <p>I projektet skulle vi alle lave mindst et billede med blikfang i photoshop til siden. Her kan man se 2 af de billeder jeg lavede til min side. Af dette projekt lærte jeg at redigere billeder og hvor vigtig en skitse er for det endelige produkt. <br> Interesseret i at se projektet? Se vores opgave <a href="https://docs.google.com/document/d/1Tb_DXTUVoEZO0RGATRGTTLhcIc5335HyCJePD-eP2OM/edit?usp=sharing">her</a>.</p>
         </div>
     </section>
 
