--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
     <div class="quote">
         <img src="./img/bulb.png">
         <div class="quote-tekst">
-            <h1>Lorem, ipsum.</h1>
-            <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. At illum laudantium earum error culpa commodi officia voluptate harum rerum odit?</h2>
+            <h1>Velkommen</h1>
+            <h2>Fantasien vi alle har som børn er den vi i fremtiden bygger vores kreativitet på. Den vildeste fantasi er den der vil have en indflydelse på fremtiden.</h2>
             <hr>
-            <h3>Lorem, ipsum.</h3>
+            <h3>- Gabriella F.S.</h3>
         </div>
     </div>
 
@@ -149,13 +149,13 @@
             </div>
             <div class="sociale">
                 <a href="https://www.facebook.com/gabriella.fog.schroder/">
-                    <img class="fb-all" src="img/fb.png" alt="Facebook">
+                    <img class="fb" src="img/fb.png" alt="Facebook">
                 </a>
                 <a href="https://www.instagram.com/gabriella7389/">
-                    <img class="ig-all" src="img/ig.png" alt="Instagram">
+                    <img class="ig" src="img/ig.png" alt="Instagram">
                 </a>
                 <a href="http://linkedin.com/in/gabriella-fog-7154791a9">
-                    <img class="li-all" src="img/li.png" alt="Linkedin">
+                    <img class="li" src="img/li.png" alt="Linkedin">
                 </a>
             </div>
         </div>
