--- a/portfolio-pp.html
+++ b/portfolio-pp.html
@@ -87,37 +87,37 @@
                 <div class="p-p1">
 
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat ratione voluptate soluta tempora vitae dolorem nostrum. Quam, doloribus. Natus, cupiditate. Expedita quo cum inventore, repellat nihil facere in ea? Quisquam!</p>
+                <p>Se mine digitale tegninger blandt andet fan-art af Bulbasaur ejet af det velkendte POKÉMON mærke.</p>
             </a>
             <hr>
         </div>
         <div class="hjemmesider">
             <a href="#"> 
-                <h2>Tus tegninger</h2>
+                <h2>Tusch tegninger</h2>
                 <div class="p-p2">
 
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat ratione voluptate soluta tempora vitae dolorem nostrum. Quam, doloribus. Natus, cupiditate. Expedita quo cum inventore, repellat nihil facere in ea? Quisquam!</p>
+                <p>Se mine tusch tegninger inspireret af en tegneserie stil blandet med mere realistiske motiver. Tegnet med alkohold baseret tuscher.</p>
             </a>
             <hr>
         </div>
         <div class="hjemmesider">
             <a href="#"> 
-                <h2>Blyands tegninger</h2>
+                <h2>Blyants tegninger</h2>
                 <div class="p-p3">
 
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat ratione voluptate soluta tempora vitae dolorem nostrum. Quam, doloribus. Natus, cupiditate. Expedita quo cum inventore, repellat nihil facere in ea? Quisquam!</p>
+                <p>Se mine blyants tegninger både realistiske og urealistiske motiver. </p>
             </a>
             <hr>
         </div>
         <div class="hjemmesider">
             <a href="#"> 
-                <h2>farvelægnings tegninger fra frivilligejob</h2>
+                <h2>Farvelægnings tegninger fra frivilligejob</h2>
                 <div class="p-p4">
 
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat ratione voluptate soluta tempora vitae dolorem nostrum. Quam, doloribus. Natus, cupiditate. Expedita quo cum inventore, repellat nihil facere in ea? Quisquam!</p>
+                <p>Se mine tegninger ment til farvelægning af demente ældre på mit frivilligejob. Fra simple tegninger, til dem med svært demens, til mere komplicerede tegninger for de lettere demente ældre.</p>
             </a>
             <hr>
         </div>
