--- a/video.html
+++ b/video.html
@@ -88,7 +88,7 @@
 
             </div>
             <h2>Video portræt</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cumque at obcaecati, eveniet qui tempora dolores dignissimos accusantium dolore voluptatem autem, corporis ad. Eius officiis corrupti molestiae repellendus excepturi facilis velit exercitationem ratione eveniet tenetur, ullam, atque possimus fuga? Ipsa, blanditiis.</p>
+            <p>Videoportrættet skulle være 1-2 minutter og skal beskrive hvem vores makker er.</p>
             <hr>
         </div>
         <!-- video -->
