--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <div>
             <p>Interesseret i at se mine personlige projekter?</p>
             <a href="portfolio-pp.html">
-                <button>Se mine personlige projekter</button>
+                <h4>Se mine personlige projekter</h4>
             </a>
             
         </div>
@@ -119,7 +119,7 @@
         <div>
             <p>Interesseret i at se mine tidligere projekter?</p>
             <a href="portfolio-projects.html">
-                <button>Se mine tidligere projekter</button>
+                <h4>Se mine tidligere projekter</h4>
             </a>
               
         </div>
@@ -132,7 +132,7 @@
     <section class="mig-side">
         <img src="img/mig.png" alt="mig">
         <a href="aboutme.html">
-           <button>Mere om mig</button> 
+           <h4>Mere om mig</h4> 
         </a>
     </section>
 
